--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <p>This is a static HTML page served by your ASP.NET application.</p>
         <p>Feel free to customize this page as per your needs.</p>
         <p>
-            <a href="/About.aspx">Go to Home</a>
+            <a href="/Default.aspx">Go to Home</a>
         </p>
     </main>
     <footer>
