--- a/index.html
+++ b/index.html
@@ -13,17 +13,14 @@
             color: #333;
             text-align: center;
         }
-
         header {
             background: #0078d7;
             color: #fff;
             padding: 20px 0;
         }
-
         main {
             padding: 20px;
         }
-
         footer {
             background: #333;
             color: #fff;
@@ -32,15 +29,13 @@
             bottom: 0;
             width: 100%;
         }
-
         a {
             color: #0078d7;
             text-decoration: none;
         }
-
-            a:hover {
-                text-decoration: underline;
-            }
+        a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -51,7 +46,7 @@
         <p>This is a static HTML page served by your ASP.NET application.</p>
         <p>Feel free to customize this page as per your needs.</p>
         <p>
-            <a href="Default.aspx">Go to Home</a>
+            <a href="/home">Go to Home</a>
         </p>
     </main>
     <footer>
